creat styles.xml file, modify layout xml file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:orientation="vertical" >
@@ -17,15 +17,15 @@
         android:layout_width="match_parent"
         android:layout_marginTop="16dp"
         android:inputType="text"
-        android:text="Name"
-        android:textColor="#b3b3b3"/>
+        android:text="@string/name"
+        android:textColor="#b3b3b3"
+        android:autofillHints="username"
+        tools:ignore="LabelFor" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:textAllCaps="true"
-        android:text="Toppings" />
+        android:text="@string/toppings"
+        style="@style/HeaderTextStyle"/>
 
     <CheckBox
         android:id="@+id/cream_checkbox"
@@ -33,7 +33,9 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:paddingLeft="24dp"
-        android:text="Whipped cream" />
+        android:text="@string/whipped_cream"
+        android:paddingStart="24dp"
+        tools:ignore="RtlSymmetry" />
 
     <CheckBox
         android:id="@+id/chocolate_checkbox"
@@ -41,15 +43,15 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:paddingLeft="24dp"
-        android:text="Chocolate" />
+        android:text="@string/chocolate"
+        tools:ignore="RtlHardcoded,RtlSymmetry" />
 
     <TextView
         android:id="@+id/text_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Quantity"
-        android:textAllCaps="true" />
+        android:text="@string/quantity"
+        style="@style/HeaderTextStyle"/>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -61,8 +63,9 @@
             android:id="@+id/decrease_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:text="-"
-            android:onClick="decrement"/>
+            android:onClick="decrement"
+            tools:ignore="UsingOnClickInXml"
+            android:text="-" />
 
         <TextView
             android:id="@+id/quantity_text_view"
@@ -70,10 +73,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:text="2"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:text="2"/>
 
 
         <Button
@@ -81,37 +84,19 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:onClick="increment"
+            tools:ignore="UsingOnClickInXml"
             android:text="+" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/price_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Order summary"
-        android:textAllCaps="true"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/order_summary_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginLeft="10dp"
-        android:text="$10"/>
 
     <Button
         android:id="@+id/order_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="ORDER"
-        android:onClick="submitOrder"/>
+        android:text="@string/order"
+        android:onClick="submitOrder"
+        tools:ignore="UsingOnClickInXml" />
 
 </LinearLayout>
 
