--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#ff0000</color>
+    <color name="LightBlue500">#03A9F4</color>
+    <color name="LightBlue700">#0288D1</color>
+    <color name="LightBlueA200">#40C4FF</color>
+
 </resources>
