--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,9 @@
 <resources>
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/LightBlue500 </item>
+        <item name="colorPrimaryDark">@color/LightBlue700 </item>
+        <item name="colorAccent">@color/LightBlueA200 </item>
     </style>
 
     <style name="CustomText">
@@ -7,7 +11,6 @@
         <item name="android:textColor"> #4527A0</item>
         <item name="android:textStyle"> italic</item>
     </style>
-
 
     <style name="HeaderTextStyle">
         <item name="android:layout_width"> wrap_content</item>
